# cachyos-updater

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  install.sh
.github/workflows/: build.yml
packaging/: cachyos-updater-helper.sh  cachyos-updater.desktop  org.cachyos.updater.policy
resources/: resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  updater.cpp  updater.h
